- Replaced readonly edit fields by labels in "User Info" and "Server Statistics" dialogs
- Context menu to move banned/unbanned users to banned/unbanned list in "Banned Users" dialog
- System language used by default
- "Move Users" dialog from "Users" -> "Advanced" menu item
- "Check for Update" in "Help" menu
- Menu to insert MOTD variables in "Server Properties" dialog
- Ability to "join last joined channel" for each server
- Ability to leave current channel from everywhere in main window
- Ability to customize some TTS and status bar messages
- Ability to customize date and time format
- Ability to replace existing file on upload
- Ability to copy all User Info to clipboard in "User Info" dialog
- Ability to sort Ban List
- Ability to hide some elements of main window
- Ability to reorder column of "User Accounts" and "Online Users" dialog
- Ability to search by IP or username in "Banned Users" dialog
- Ability to show password on login error, channel password, channel operator password, and channel share
- Single dialog to enter username and password on login error and channel share
- Support for Import/Export entire Server List in "Connect to a Server" dialog
- Support Idle Time on Linux (X11)
- Support TTS events via running screen reader on Windows and MacOS with Qt Accessibility Announcement (Qt 6.8)
- Removed option "Announce server name" from TTS options, use customizable messages instead
- Optional sound event for user typing private message
- Only show available info in "User Info" dialog
- "Voice level" progress bar in Main Window can now get focus
- Transfer progress bar in "File Transfer" dialog can now get focus
- Locale file size now also use in "File Transfer" dialog
- Reset label of files list when disconnected from server
- Fixed labels of edit fields in "Custom Video Format" dialog
- Fixed limit text size in channels tree ignored for screen readers
- Local date time now also use in "About" dialog
- Ban time displays in local format